# Atomic-IP-Marketplace

./: .gitignore  Cargo.toml  README.md  SECURITY.md  TODO.md  Uiatomicaip
contracts/atomic_swap/: Cargo.toml
contracts/atomic_swap/src/: lib.rs
contracts/atomic_swap/test_snapshots/test/: test_confirm_swap_valid_proof.1.json  test_decryption_key_accessible_after_confirmation.1.json  test_fee_floor_applies_for_small_amounts.1.json  test_invalid_proof_rejected.1.json  test_is_listing_available_after_cancel.1.json  test_is_listing_available_no_swap.1.json  test_is_listing_available_pending_swap.1.json  test_non_buyer_cancel_fails_auth.1.json  test_pause_emits_event.1.json  test_seller_impersonation_rejected.1.json  test_unpause_emits_event.1.json
contracts/ip_registry/: Cargo.toml
contracts/ip_registry/src/: lib.rs
contracts/zk_verifier/src/: lib.rs
docs/: architecture.md
frontend/: .env.example  README.md  app.js  index.html  package.json  style.css
frontend/UI DESIGN/: figma-219.txt  figma-222.txt  figma-223.txt  figma.txt
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/components/: CancelSwapButton.css  CancelSwapButton.jsx  CancelSwapButton.tsx  ConfirmSwapForm.css  ConfirmSwapForm.jsx  ConfirmSwapForm.tsx  InitiateSwapModal.tsx  ListingCard.css  ListingCard.jsx  ListingCard.tsx  ListingsPage.tsx  MyListingsDashboard.tsx  NetworkSelector.css  NetworkSelector.tsx  SetMerkleRootForm.css  SetMerkleRootForm.tsx  SwapCard.css  SwapCard.jsx
frontend/src/context/: NetworkContext.tsx
scripts/: deploy_testnet.sh  test.sh
(+15 files in other folders)
