[package]
name = "atomic_swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
ip_registry = { path = "../ip_registry" }
zk_verifier = { path = "../zk_verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true }
ip_registry = { path = "../ip_registry" }
zk_verifier = { path = "../zk_verifier" }
